main: scrollbar fix

--- a/src/styles/scrollbar.scss
+++ b/src/styles/scrollbar.scss
@@ -5,7 +5,7 @@
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: white;
+  background: transparent;
 }
 
 /* Handle */
